--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # ==============================================================
 # = Data Source
 # ==============================================================
-spring.datasource.url = jdbc:mysql://localhost:3306/testingdata
+spring.datasource.url = jdbc:mysql://localhost:3306/testingdata?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = root
 
@@ -20,7 +20,7 @@ spring.jpa.show-sql = true
 # ==============================================================
 # = Hibernate ddl auto (create, create-drop, update)
 # ==============================================================
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 
 # ==============================================================
 # = The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -40,6 +40,8 @@ logging.level.org.hibernate.SQL= DEBUG
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
 spring.jackson.time-zone= UTC
 
+management.security.enabled=false
+
 ## App Properties
 app.jwtSecret= JWTSuperSecretKey
 app.jwtExpirationInMs = 7200000
@@ -49,4 +51,6 @@ app.jwtExpirationInMs = 7200000
 
 server.port= 8080
 
-
+security.user.name=admin@mail.ru
+security.user.password=1234
+management.security.roles=ADMIN
